--- a/APIServer/html/main.html
+++ b/APIServer/html/main.html
@@ -2,20 +2,23 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
 	"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-tw">
 <head>
-	<title>TW Weather API</title>	
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="Content-Language" content="zh-tw" />
+	<title>TW Weather API</title>
+	<style type="text/css" media="screen">
+		body {
+			font-size: 14pt;
+			font-family: Times, serif;
+			background: #FFF;
+			margin: 40px;
+		}
+	</style>
 </head>
 
 <body>
-<h1>台灣天氣預報 API</h1>
-<ul>
-<li>關心天氣
-	<ul><li><a href="/overview">HTML 格式</a></li></ul>
-	<ul><li><a href="/overview?output=plain">純文字格式</a></li></ul>
-</li>
-<li><a href="/forecast">48 小時天氣</a></li>
-</ul>
-
+<h1>台灣天氣預報 API Server</h1>
+<p>相關說明，請參見 <a href="http://wiki.github.com/zonble/twweather/api">API 手冊</a>。
 </body>
 </html>
