Updates the webpage for the twweather project.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
-My GitHub Page
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
+	<title>TW Weather - 台灣天氣</title>
+	
+	<style type="text/css">
+	body {
+			margin-top: 1.0em;
+			background-color: #FFF;
+			font-family: "helvetica"; 
+			color: #000000;
+			line-height: 1.8em;
+			font-size: 12pt;
+		}
+		#container {
+			margin: 0 auto;
+			width: 700px;
+		}
+		h1 { font-size: 3.8em; color: #000033; margin-bottom: 3px; }
+		h1 .small { font-size: 0.4em; color: #333; }
+		h1 a { text-decoration: none }
+		h2 { font-size: 1.5em; color: #000033; }
+		h3 { text-align: center; color: #000033; }
+		a { color: #000033; }
+		.description { font-size: 11pt; margin-bottom: 50px; margin-top: 10px;}
+		.download { float: right; }
+		pre { background: #000; color: #fff; padding: 15px;}
+		hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
+		.footer { text-align:center; padding-top:30px; font-style: italic; }
+		.logo {float: right; margin-left: 30px; margin-bottom: 30px; margin-top: 30px;}
+		div#download {border: 1px solid #666; padding: 20px;}
+		code {font-size: 12px; }
+		p, li {font-size: 11pt; line-height: 1.5em;}
+		.screenshot {float:right; margin:10px; border: 1px solid #333;}
+	</style>
+	
+</head>
+
+<body>
+  <a href="http://github.com/zonble/twweather"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  
+  <div id="container">
+    <h1><a href="http://github.com/zonble/twweather">TW Weather</a></a>&nbsp;<span class="small">台灣天氣</span></h1>
+
+	<div class="description">
+	<p>Copyright © 2009 Weizhong Yang (a.k.a zonble, <a href="http://zonble.net">http://zonble.net</a>). All Rights Reserved.</p>
+	</div>
+
+	<p>這個東西當然是拿來看天氣資訊的，不然還能夠有什麼用途？</p>
+	
+	<img src="screenshot.png" class="screenshot" alt="screenshot"/>
+	
+	<h2>簡介</h2>
+
+	<p>專案基本上分成兩個部分－Client 端與 server 端。
+
+	<ul>
+	<li>Client 端目前提供一個在 iPhone 上使用的版本，您可以直接在蘋果的軟體商店 <a href="http://itunes.apple.com/tw/app/id302846279?mt=8">AppStore 上下載</a></li>
+	<li>Server 端程式，則是用來分析中央氣象局網頁，並且將資料轉成其他更方便使用的格式。</li>
+	</ul>
+	
+	<p>岔個題，說到右邊這張截圖－為什麼明明到了十一月，台北還是會出現三十二度這種氣溫呢？…</p>
+	
+	<h2>iPhone 軟體</h2>
+	
+	<p><a href="http://itunes.apple.com/tw/app/id302846279?mt=8"><img src="appstore.jpeg" /></a></p>
+
+	<p>目前提供的功能包括－</p>
+	<ul>
+	<li>中央氣象局特別警告（包括颱風、地震報告等）</li>
+	<li>目前天氣觀測資料瀏覽</li>
+	<li>關心天氣（中央氣象局天氣概況文字資料）</li>
+	<li>今明預報（四十八小時天氣預測）</li>
+	<li>一週天氣</li>
+	<li>一週旅遊</li>
+	<li>三天漁業</li>
+	<li>台灣近海</li>
+	<li>三天潮汐</li>
+	</ul>
+
+	<p>您需要 iPhone OS 3.0 以上版本的作業系統，才能夠使用。</p>
+	<p>至於在介面上，我覺得 UIKit 本身所提供的元件就已經很好用了，於是沒有做什麼花俏的設計。</p>
+	
+	<h2>Server 端程式</h2>
+	
+	<p>這個程式的資料來源來自於中央氣象局網站，不過，因為中央氣象局網站三不五時會改一個版本，氣象雲圖也往往在改版之後就換一個位置，所以，client 軟體不是直接去抓取資料，而是中間又透過一台 web server，這個 server 負責向中央氣象局抓取資料，並且轉換成方便供 client 端使用的資料。如此一來，就算中央氣象局改了資料，也只需要改 server 端的程式，而不需要再 App Store 上另外更新一個版本，而苦苦等候蘋果的審核程序。</p>
+	
+	<p>這個專案所使用的 server 是 Google 的 <a href="http://code.google.com/appengine/">App Engine</a>，用的是其中的 python API 開發。其中最主要的是兩個檔案－</p>
+	<ul>
+	<li>weather.py：負責抓取中央氣象局網頁資料，轉換成 python 的 list 資料。您或許也可以拿這個東西，搭配 plurk 的非官方 python API，寫個 plurk 機器人之類的東西。</li>
+	<li>main.py：App Engine 主程式。負責將抓來的資料轉成其他格式，目前提供 <a href="http://developer.apple.com/mac/library/documentation/cocoa/Conceptual/PropertyLists/index.html">Property list</a>（plist）以及 JSON 兩種格式。iPhone client 端目前使用的是 plist 格式。</li>
+	</ul>
+	
+	<h2>Objective-C API Box</h2>
+	
+	<p>在 iPhone 軟體的部份，基本上將使用者介面、與用來處理網路資料的部份分成了兩塊，所以，用來處理網路資料的部分，其實還可以繼續做其他用途，例如寫 Mac 版本的應用程式，或是 Dashboard widget 用的 <a href="http://developer.apple.com/Mac/library/documentation/AppleApplications/Conceptual/Dashboard_ProgTopics/Articles/WidgetPlugin.html">widget plugin</a>。不過目前還沒有這方面的實作。</p>
+	
+	<h2>編譯 iPhone 軟體</h2>
+	
+	<p>您需要 Mac OS X 10.5 以上版本的 Intel CPU 麥金塔電腦，以及 iPhone SDK  3.0 以上版本，才能夠編譯本專案的 iPhone client 端軟體。</p>
+
+	<p>建議直接使用 git 取出本專案的程式碼，因為本專案在 git 設定中加入了一些外部的 library，如果沒有這些 library，會無法成功編譯。請使用以下指令取得完整程式碼：</p>
+	
+	<pre>
+$ git clone git://github.com/zonble/tweather
+$ cd tweather
+$ git submodule init
+$ git submodule update</pre>
+
+	<p>接下來，只要進入 ClientAPIBOX->ObjectiveC->TWWeather 目錄，用 Xcode 開啟 TWWeather.xcodeproj，便可以開始編譯。</p>
+	
+	<h2>使用 Server 端程式</h2>
+	
+	<p>Server 端程式位在 APIServer 目錄下。</p>
+	
+	<p>您需要 python 2.5 以上的環境，並且就您目前所使用的平台，下載 <a href="http://code.google.com/appengine/downloads.html">Google App Engine SDK</a>。您可以使用本專案的基礎，另外製作其他的天氣程式，不過建議不要直接使用本專案目前使用的 API server 的網址，請將程式架設到其他的機器上，因為本專案使用的 API server，也很有可能在未來有所修改。</p>
+	
+	<h2>改 iPhone 開發人員的建議</h2>
+	
+	<p>雖然 iPhone 上面有那麼多種的應用程式，但是最多的不外乎兩種：遊戲以及網路資料的 client 端。</p>
+	<p>就網路資料的 client 端來說，你可以看到 Facebook、Flickr、Google 與 Yahoo 的應用程式、所有的天氣軟體，甚至像電子書下載等，都是這種類型；也就是如何從網路上抓取資料，然後透過 native 的 iPhone UI 做流暢的呈現。這類型程式的開發，就可以區分成幾個部分－server 端的資料庫與 API 設計（XML/JSON）、Objective-C 對於網路資料的處理、iPhone 本身的 UI 設計。個人覺得目前寫得還算是精簡，希望對您撰寫這方面程式時，可以有所幫助。</p>
+	
+	<p>另外，為了驗證資料的正確（或這麼說－快速檢查中央氣象局網頁是否改了版本），這個專案在抓取中央氣象局網頁的工具、App Engine 的部份、以及 Client 端的 API Box，都做了 unit test。如果您不清楚這些東西的 unit test 怎麼做，也不妨看一看。我知道很多人寫程式都沒在做 test，可是呢，在製作軟體時不能夠只注意在開發速度或是介面的眩目，要做一些基本功夫，才能夠保證軟體堅實的品質。</p>
+	
+	<h2>建議或詢問</h2>
+
+	<p>請來信至 service {at} zonble {dot} net</p>
+	
+	<img src="badge.gif" alt="Made on a Mac"/>
+</div>
+
+</body>
+</html>
