Updates the gh-pages.

--- a/index.html
+++ b/index.html
@@ -138,16 +138,23 @@ $ git submodule update</pre>
 	
 	<h2>建議或詢問</h2>
 
-	<p>請來信至 service {at} zonble {dot} net 。</p>
+	<p>請來信至 <a href="mailto:service {at} zonble {dot} net">service {at} zonble {dot} net</a> 。</p>
 	
-	<p>另外，因為蘋果的限制－開發者本身不能夠對自己的產品發表評論，所以，如果您在 App Store 上，透過發表評論發問，因為這個限制，我是沒有辦法在 App Store 上回應的。祈請見諒。</p>
+	<p>因為蘋果的限制－開發者本身不能夠對自己的產品發表評論，所以，如果您在 App Store 上，透過發表評論發問，因為這個限制，我是沒有辦法在 App Store 上回應的。祈請見諒。</p>
+
+	<p>您也可以成為本程式在 Facebook 的 Fans，不過，我個人不知道成為 Fans 會有什麼好處
+	…。</p>	
+	
+	<script type="text/javascript" src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php/en_US"></script><script type="text/javascript">FB.init("eec657acdca6e360444746a917b620a5");</script><fb:fan profile_id="188341743092" stream="0" connections="10" logobar="0" width="700" heigh="200"></fb:fan>
 	
 	<h2>FAQ</h2>
 	
 	<p><b>問：為什麼 iPhone 程式會限制 17 歲以上才可以使用？除了天氣之外，難道有什麼好料嗎？</b></p>
 	<p>答：這是因為 App Store 的一項限制造成的。因為這個程式裡頭，放了一個瀏覽器元件，用來開中央氣象局的網頁，而根據蘋果的想法，只要是用到了 web 元件，都有可能拿來看十八禁的內容，所以必須要加上這個年齡限制。</p>
 	
+	
 	<img src="badge.gif" alt="Made on a Mac"/>
+	
 </div>
 
 </body>
